feature Add compiler option for Vector API.